Fixed issue - Dimension/column is not added at correct index also added script to expand collapse sections.

--- a/app/assets/stylesheets/reports/report.css.scss
+++ b/app/assets/stylesheets/reports/report.css.scss
@@ -41,6 +41,7 @@
     color: #fff;
     padding: 7px 5px 7px 15px;
     font-weight: bold;
+    cursor: pointer;
   }
 
   .body {
@@ -208,4 +209,13 @@
       width: 130px;
     }
   }
+}
+
+.disable-text-select {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
 }
